修改导入模板

--- a/Excel和PDM互转/使用说明.md
+++ b/Excel和PDM互转/使用说明.md
@@ -6,17 +6,22 @@
 ### 1、PDMD导出到EXCEL
 打开PDM→Ctrl+Shift+X→将Export_PDM_To_Excel.vbs代码导入 运行即可。<br/>
 
-注意：有一个参数需要设置'是否需要合并单元格<br/>
+注意：
+有一个参数需要设置'是否需要合并单元格<br/>
 '表信息不会合并<br/>
 isMerage=FALSE<br/>
 '表信息会合并<br/>
 isMerage=TRUE<br/>
 
+
+
 ### 2、EXCEL导入到PDM
 打开PDM→Ctrl+Shift+X→将Export_PDM_To_Excel.vbs代码导入 运行即可。<br/>
-注意：导入文件的路径需要手动设置<br/>
+注意：
+导入文件的路径需要手动设置<br/>
 '定义Excel Sheet<br/>
 DIM xlBook  <br/>
 SET xlBook = xlApp.WorkBooks.Open("D:\model\model_import.xlsx")<br/>
 
-Excel导入模板在本目录下面
+Excel导入模板在本目录下面<br/>
+主键列和非空列用Y(大写)标识
