‘优化Excel和PDM互转功能

--- a/1.1Excel和PDM互转/使用说明.md
+++ b/1.1Excel和PDM互转/使用说明.md
@@ -24,4 +24,12 @@ DIM xlBook  <br/>
 SET xlBook = xlApp.WorkBooks.Open("D:\model\model_import.xlsx")<br/>
 
 Excel导入模板在本目录下面<br/>
-主键列和非空列用Y(大写)标识
+主键列使用PRI标识<br/>
+是否为空使用NO(不许为空) YES(可以为空标识)<br/>
+
+### 3、 Navicat导出表结构到Excel
+新建查询语句(语句在本目录下)<br/>
+根据导出向导直接导出到Excel即可(需要勾选导出标题栏)<br/>
+
+
+
